[gd_scene load_steps=6 format=3 uid="uid://b20mscmoltnma"]

[ext_resource type="Script" uid="uid://bcapa5qqlqhsj" path="res://turret.gd" id="1_3oylf"]
[ext_resource type="AudioStream" uid="uid://d3eq2lr661c0o" path="res://sounds/basic turret shooting.mp3" id="2_tjdg3"]

[sub_resource type="SphereMesh" id="SphereMesh_3oylf"]

[sub_resource type="SphereShape3D" id="SphereShape3D_tjdg3"]

[sub_resource type="SphereShape3D" id="SphereShape3D_c5apd"]

[node name="Turret" type="Node3D"]
script = ExtResource("1_3oylf")
attack_cooldown = 10.0

[node name="RotationBase" type="Node3D" parent="."]

[node name="TurretModel" type="MeshInstance3D" parent="RotationBase"]
mesh = SubResource("SphereMesh_3oylf")

[node name="ProjectileSpawn" type="Node3D" parent="RotationBase"]

[node name="DetectionArea" type="Area3D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionArea"]
transform = Transform3D(1.32, 0, 0, 0, 1, 0, 0, 0, 1.32, 0, 0, 0)
shape = SubResource("SphereShape3D_tjdg3")

[node name="PickupDetectionArea" type="Area3D" parent="."]
transform = Transform3D(1.5, 0, 0, 0, 1.2, 0, 0, 0, 1.1, 0, 0, 0)
collision_layer = 32
collision_mask = 32

[node name="CollisionShape3D" type="CollisionShape3D" parent="PickupDetectionArea"]
shape = SubResource("SphereShape3D_c5apd")

[node name="ShootSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_tjdg3")
max_db = -10.0

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="PickupDetectionArea" to="." method="_on_pickup_detection_area_body_entered"]
[connection signal="body_exited" from="PickupDetectionArea" to="." method="_on_pickup_detection_area_body_exited"]
